# join_quran

./: .gitignore  Procfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  rquirements.txt  vercel.json
.githooks/: pre-commit
.github/workflows/: frontend-ci.yml
backend/: Dockerfile  chainlit_app.py  requirements.txt
backend/app/: main.py
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: ChatWidget.js  Header.js
frontend/pages/: index.js
frontend/styles/: globals.css
scripts/: scan_secrets.py
src/join_quran/: .gitignore  __init__.py
