[project]
name = "join-quran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Shafqat sarwar", email = "khansarwar1@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.9.0",
    "google-generativeai>=0.8.5",
    "openai-agents>=0.5.0",
]

[project.scripts]
join-quran = "join_quran:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
